--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -2,3 +2,14 @@
 .md-status--stable {
     display: none;
   }
+
+/* Color chip */
+.color-chip {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    margin-right: 8px;
+    vertical-align: middle;
+}
