--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -9,7 +9,7 @@
     width: 20px;
     height: 20px;
     border-radius: 4px;
-    border: 1px solid #ddd;
+    border: 1px solid #e0e0e0;
     margin-right: 8px;
     vertical-align: middle;
 }
